# tree-sitter-chenglang

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  main.cheng  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-chenglang.pc.in
bindings/c/tree_sitter/: tree-sitter-chenglang.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_chenglang/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterChenglangTests/: TreeSitterChenglangTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
